# jive

./: .gitignore  LICENSE  README.md
jive_app/: .env  .env.example  .gitignore  README.md  build.yaml  pubspec.yaml
jive_app/android/: settings.gradle
jive_app/android/app/: build.gradle
jive_app/android/spotify-app-remote/: README.md
jive_app/ios/Runner/: Info.plist
jive_app/ios/Runner.xcodeproj/: project.pbxproj
jive_app/lib/: logger.dart  main.dart
jive_app/lib/audio/: grammophone.dart  youtube-integraion.dart  youtube-integration.dart
jive_app/lib/comm/: device_comm.dart  device_comm.freezed.dart  device_comm.g.dart  multiplexer.dart  transport.dart
jive_app/lib/constants/: env.dart  prefs.dart  style.dart
jive_app/lib/provider/: dio.dart  dio.g.dart  prefs.dart  prefs.g.dart  queue_manager.dart  router.dart  router.g.dart  router.gr.dart  songs.dart  songs.g.dart  songs.g.dart.old  theme.dart  theme.g.dart
jive_app/lib/repositories/: search_repository.dart  search_repository.g.dart
jive_app/lib/utils/: consts.dart  provider_observer.dart  util-methods.dart
jive_app/linux/: CMakeLists.txt
jive_app/linux/runner/: my_application.cc
jive_app/macos/Flutter/: GeneratedPluginRegistrant.swift
jive_app/macos/Runner.xcodeproj/: project.pbxproj
jive_app/mocks/: mock_transport.dart
jive_app/test/: multiplexer_test.dart  widget_test.dart
jive_app/test/comm/: device_comm_test.dart
jive_app/web/: index.html
jive_app/windows/: CMakeLists.txt
relayserver/: .gitignore  Cargo.toml  Dockerfile
relayserver/src/: main.rs
(+36 files in other folders)
