[package]
name = "relayserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-ws = "0.3.0"
actix-ws-proxy = "0.1.2"
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["macros"] }
tokio-bichannel = "1.0.2"
trpl = "0.2.0"
