[package]
name = "relayserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-ws = "0.3.0"
actix-ws-proxy = "0.1.2"
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["macros"] }
tokio-bichannel = "1.0.2"
trpl = "0.2.0"
